# simujaules

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.js  deploy.sh  energy-worker-wasm.js  energy-worker.js  graph-engine.js  index.html  llms.txt  manifest.webmanifest  performance-formula.md  sitemap.xml  sw.js  test-dem-smoothing.mjs  test-energy-v2.mjs  test-features.js  test-graph-engine.mjs  test-water-raster.mjs  test-worker-pool.mjs  test-worker.js
.github/workflows/: deploy.yml
backend/: Cargo.toml  README.md  test-backend.mjs
backend/.cargo/: config.toml
backend/src/: main.rs
census/: .gitignore  README.md  build_fgb.py  census-density.mjs  download_census.py  package-lock.json  package.json  requirements.txt  sample_census.py  test-census-density.mjs  test-census-sampler.mjs
docs/: archive-energy-optionB-2026-07-06-moot.md  energy-goal-2026-07-07-workorder.md  energy-journal-2026-07-06-workorder.md  grid-adaptive.mjs  grid-connectivity-sensitivity-2026-07-11.md  grid-correct.mjs  grid-eik.mjs  grid-longedge.mjs  grid-pull.mjs  grid-sens.mjs  remote-cloud-setup.md  review-2026-07-01.md  review-2026-07-02-round2-workorder.md  runtime_estimate.md
modelo/: en.html  index.html
notes/: bridges-and-passability.md
orchestrator/: Dockerfile  README.md  deploy-orchestrator.sh  main.py  requirements.txt
qgis/: energy_field_qgis_3.py  top_n_routes_qgis.py
tools/: phase1-fix-fleet.workflow.js
vm/: README.md  bake-instance.sh  idle-watchdog.sh  startup-script.sh
vocab/: simujoules.jsonld
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+8 files in other folders)
