[package]
name = "simujoules-backend"
# 0.2.0: v57 movement directions (nDirs 4–128, profile-integrated long moves).
# The app gates nDirs≠8 backend dispatch on /health version >= 0.2.0 — a
# pre-0.2.0 binary silently ignores the nDirs param (serde skips unknown
# fields) and would compute an 8-dir field.
version = "0.2.0"
edition = "2021"
description = "Optional native compute backend for the Simujoules density mode (off by default in the app)"

[dependencies]
tiny_http = "0.12"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
flate2 = "1"

[profile.release]
lto = true
codegen-units = 1
