[package]
name = "energy-wasm"
version = "0.1.0"
edition = "2021"
description = "Asymmetric Dijkstra over a DEM grid, compiled to WebAssembly."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
